--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "@babel/core": "7.1.0",
+        "@fortawesome/fontawesome-free": "^5.4.2",
         "@svgr/webpack": "2.4.1",
         "babel-core": "7.0.0-bridge.0",
         "babel-eslint": "9.0.0",
